--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li ><a href="#" class="active"> Home </a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Portolio</a></li>
+                    <li><a href="#">Portfolio</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
