finish the future section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
         </div>
     </section>
     <!-- end the services section -->
+    <!-- start the future section -->
+    <section class="future">
+        <div class="overlay"></div>
+        <figure>
+            <img src="image/mobile.png" alt="">
+        </figure>
+        <div class="text">
+            <div class="content">
+                <h1>Our Design Comes With...</h1>
+                <ul>
+                    <li><i class="fas fa-desktop"></i><p>Responsive Design</p></li>
+                    <li><i class="fas fa-desktop"></i><p>Modern And Clean Design</p></li>
+                    <li><i class="fas fa-desktop"></i><p>Clean Code</p></li>
+                    <li><i class="fas fa-desktop"></i><p>Browser Friendly</p></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- end the future section -->
+    <!-- start Portfolio section  -->
+    
+    <!-- end Portfolio section  -->
     
 </body>
 </html>
