--- a/index.html
+++ b/index.html
@@ -327,6 +327,134 @@
         </div>
     </section>
 <!-- end  quote section -->
-
+<!-- start  pricing section -->
+    <section class="pricing">
+        <div class="container">
+            <article class="heading">
+                <h2>Pricing</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </article>
+            <div class="box-prices">
+                <div class="pricing-card">
+                    <div class="head">
+                        <h3>Basic</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="pricing-card">
+                    <div class="head">
+                        <h3>Premium</h3>
+                        <span>29</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="pricing-card">
+                    <div class="head">
+                        <h3>Pro</h3>
+                        <span>39</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                <div class="pricing-card">
+                    <div class="head">
+                        <h3>Platinum</h3>
+                        <span>49</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Extra Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">buy now</a>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="contact-text">
+                <p>Contact us if you have special request</p>
+                <a href="#">contact us</a>
+            </div>
+        </div>
+    </section>
+<!-- end  pricing  section -->
+<!-- start  subscribe   section -->
+    <section class="subscribe">
+        <div class="container">
+            <form action="">
+                <i class="far fa-envelope fa-lg"></i>
+                <input type="email" name="mail" placeholder="Your Email">
+                <input type="submit" value="subscribe">
+            </form>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.</p>
+        </div>
+    </section>
+<!-- end  subscribe section -->
+    <!-- start contact section -->
+    <section class="contact">
+        <div class="container">
+            <article class="heading">
+                <h2>Contact Us</h2>
+                <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+            </article>
+            <div class="content">
+                <form action="">
+                    <input class="main-input" type="text" name="name" placeholder="Your Name">
+                    <input  class="main-input" type="email" name="mail" placeholder="Your Email">
+                    <textarea  class="main-input" name="massage"placeholder="Your massage" ></textarea>
+                    <input type="submit" value="send massage">
+                </form>
+                <div class="info">
+                    <h4>Get In Touch</h4>
+                    <span class="phone">+00 123.456.789</span>
+                    <span class="phone">+00 123.456.789</span>
+                    <h4>Where We Are</h4>
+                    <address>Awesome Address 17 <br> New York, NYC <br> 123-4567-890 <br> USA</address>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end contact section -->
+<!-- start footer section  -->
+    <footer>
+        <div class="container">
+            <img src="image/logo.png" alt="">
+            <p>we are social</p>
+            <div class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-home"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <p class="copyright">&copy; 2021 <span>Kasper</span> All Right Reserved</p>
+        </div>
+    </footer>
+<!-- end footer section  -->
 </body>
 </html>
